@@ -1,3 +1,9 @@
+2008-09-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/37408
+	* function.c (assign_parm_find_stack_rtl): Set correct MEM_SIZE
+	if parm is promoted.
+
 2008-09-08  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (alpha_split_lock_test_and_set): Move
